Refactor test assertions to use `getFirst()` and add ArchUnit dependency to `pom.xml`.